--- a/webapp/src/styles/variables.scss
+++ b/webapp/src/styles/variables.scss
@@ -3,6 +3,8 @@ $site-bg: #ddd;
 $navbar-bg: #535353;
 $navbar-bg-alt: #333;
 
+$text-light: #fff;
+
 /* Measurements */
 $std-margin: 1rem;
 $std-margin-half: 0.5rem;
