--- a/webapp/src/styles/variables.scss
+++ b/webapp/src/styles/variables.scss
@@ -6,6 +6,7 @@ $navbar-bg-alt: #333;
 $text-light: #fff;
 
 /* Measurements */
+$std-margin-double: 2rem;
 $std-margin: 1rem;
 $std-margin-half: 0.5rem;
 
