Integrated example chart in results for testing.

--- a/webapp/src/styles/main.scss
+++ b/webapp/src/styles/main.scss
@@ -6,4 +6,5 @@
 @import '../components/common/navbar/';
 @import '../components/common/footer/';
 
+@import '../components/results';
 @import '../components/notFound';
