Wrapped benchmark component in a container.

--- a/webapp/src/styles/main.scss
+++ b/webapp/src/styles/main.scss
@@ -7,4 +7,5 @@
 @import '../components/common/footer/';
 
 @import '../components/results';
+@import '../components/benchmark';
 @import '../components/notFound';
