Created a LoadingSpinner component.

--- a/webapp/src/styles/main.scss
+++ b/webapp/src/styles/main.scss
@@ -5,6 +5,7 @@
 
 @import '../components/common/navbar/';
 @import '../components/common/footer/';
+@import '../components/common/loadingSpinner/';
 
 @import '../components/results';
 @import '../components/benchmark';
