Created a ResultsDropdown component.

--- a/webapp/src/styles/main.scss
+++ b/webapp/src/styles/main.scss
@@ -6,6 +6,7 @@
 @import '../components/common/navbar/';
 @import '../components/common/footer/';
 @import '../components/common/loadingSpinner/';
+@import '../components/common/resultsDropdown/';
 
 @import '../components/results';
 @import '../components/benchmark';
