--- a/webapp/src/styles/main.scss
+++ b/webapp/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import '../components/common/footer/';
 @import '../components/common/loadingSpinner/';
 @import '../components/common/resultsDropdown/';
+@import '../components/common/sectionHeader/';
 
 @import '../components/results';
 @import '../components/benchmark';
