Added currently available content to Results page.

--- a/webapp/src/components/common/resultsDropdown/index.scss
+++ b/webapp/src/components/common/resultsDropdown/index.scss
@@ -1,7 +1,11 @@
 .results-dropdown {
+  width: 100%;
+
   .btn {
     background-color: $navbar-bg;
     border-color: $navbar-bg;
+    padding-right: $std-margin-double;
+    padding-left: $std-margin-double;
 
     &:hover, &:not(:disabled):not(.disabled):active, &:focus {
       background-color: $navbar-bg-alt;
