Added styling to ResultBarChart and made it responsive.

--- a/webapp/src/styles/main.scss
+++ b/webapp/src/styles/main.scss
@@ -8,6 +8,7 @@
 @import '../components/common/loadingSpinner/';
 @import '../components/common/resultsDropdown/';
 @import '../components/common/sectionHeader/';
+@import '../components/common/resultBarChart/';
 
 @import '../components/results';
 @import '../components/benchmark';
