--- a/webapp/src/styles/variables.scss
+++ b/webapp/src/styles/variables.scss
@@ -10,5 +10,11 @@ $std-margin-double: 2rem;
 $std-margin: 1rem;
 $std-margin-half: 0.5rem;
 
+$std-border-radius: 10px;
+
 /* Breakpoints */
 $sub-collapsing-breakpoint: 550px;
+$sm-breakpoint: 576px;
+$md-breakpoint: 768px;
+$lg-breakpoint: 992px;
+$xl-breakpoint: 1200px;
