Created BenchmarkForm component.

--- a/webapp/src/styles/main.scss
+++ b/webapp/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import '../components/common/resultsDropdown/';
 @import '../components/common/sectionHeader/';
 @import '../components/common/resultBarChart/';
+@import '../components/common/benchmarkForm/';
 
 @import '../components/results';
 @import '../components/benchmark';
