--- a/webapp/src/styles/main.scss
+++ b/webapp/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 @import './variables.scss';
+@import './mixins.scss';
 @import './global.scss';
 
 @import '../components/common/navbar/';
