Updated BenchmarkModal and LoadingSpinner to have them together.

--- a/webapp/src/styles/main.scss
+++ b/webapp/src/styles/main.scss
@@ -11,6 +11,8 @@
 @import '../components/common/sectionHeader/';
 @import '../components/common/resultBarChart/';
 @import '../components/common/benchmarkForm/';
+@import '../components/common/benchmarkRunner/';
+@import '../components/common/benchmarkModal/';
 
 @import '../components/results';
 @import '../components/benchmark';
