Changed UploadToast styling.

--- a/webapp/src/styles/main.scss
+++ b/webapp/src/styles/main.scss
@@ -13,6 +13,7 @@
 @import '../components/common/benchmarkForm/';
 @import '../components/common/benchmarkRunner/';
 @import '../components/common/benchmarkModal/';
+@import '../components/common/uploadToast/';
 
 @import '../components/results';
 @import '../components/benchmark';
