Changed site styling.

--- a/webapp/src/styles/variables.scss
+++ b/webapp/src/styles/variables.scss
@@ -1,7 +1,7 @@
 /* Site Palette */
-$site-bg: #ddd;
-$navbar-bg: #535353;
-$navbar-bg-alt: #333;
+$site-bg: #99a8b2;
+$navbar-bg: #1c2b2d;
+$navbar-bg-alt: #1f6f8b;
 
 $text-light: #fff;
 
