Created ResultLineChart component.

--- a/webapp/src/styles/main.scss
+++ b/webapp/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import '../components/common/resultsDropdown/';
 @import '../components/common/sectionHeader/';
 @import '../components/common/resultBarChart/';
+@import '../components/common/resultLineChart/';
 @import '../components/common/benchmarkForm/';
 @import '../components/common/benchmarkRunner/';
 @import '../components/common/benchmarkModal/';
